--- a/TrabajoPractico1/css/Pages/index.css
+++ b/TrabajoPractico1/css/Pages/index.css
@@ -1,6 +1,8 @@
 /* Estilos específicos para la página index. Mobile-First*/
 .body {
-    color: #892020;
+    font-family: "Bungee Spice", sans-serif;
+    font-weight: 200;
+    font-style: normal
 }
 
 .footer {
