--- a/TrabajoPractico1/css/Components/footer.css
+++ b/TrabajoPractico1/css/Components/footer.css
@@ -1,3 +1,10 @@
 .footer {
-    background-color: #555;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+    margin-top: 150px;
+    border-top: 2px solid;
+    width: 100%;
 }
