--- a/TrabajoPractico1/css/Pages/index.css
+++ b/TrabajoPractico1/css/Pages/index.css
@@ -3,7 +3,9 @@
     font-family: "Bungee Spice", sans-serif;
     font-weight: 200;
     font-style: normal;
-    background-color: #1235;
+    background: linear-gradient(to bottom, #551800, #101010);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .title {
