--- a/TrabajoPractico1/css/Components/footer.css
+++ b/TrabajoPractico1/css/Components/footer.css
@@ -5,6 +5,6 @@
     align-items: center;
     gap: 25px;
     margin-top: 150px;
-    border-top: 2px solid;
+    border-top: 2px solid rgb(239, 100, 14);
     width: 100%;
 }
