--- a/TrabajoPractico1/css/Pages/index.css
+++ b/TrabajoPractico1/css/Pages/index.css
@@ -8,6 +8,10 @@
     background-attachment: fixed;
 }
 
+a {
+    text-decoration: none;
+}
+
 .title {
     display: flex;
     justify-content: center;
@@ -22,21 +26,21 @@
 
 .video-section {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin: 0 20px 0 20px;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
 .video {
+    display: flex;
     width: 80%;
     height: 33vh;
-    justify-content: center;
+    object-fit: cover;
+    background-color: aliceblue;
 }
 
-
-.text-video {
+.video-section h2 {
     display: flex;
-    justify-content: center;
     align-items: center;
     font-size: large;
 }
@@ -55,7 +59,8 @@
 }
 
 .section-mision p {
-    max-width: 600px;
+    /* max-width: 600px; */
+    display: block;
     margin: 0 auto;
     font-size: 18px;
     line-height: 1.6;
