--- a/TrabajoPractico1/css/Media/tablet.css
+++ b/TrabajoPractico1/css/Media/tablet.css
@@ -1,4 +1,4 @@
-/* @media (max-width: 768px) {
+@media (max-width: 768px) {
     header nav {
       flex-direction: column;
     }
@@ -6,4 +6,4 @@
     .footer {
       text-align: center;
     }
-  } */
+  }
