--- a/TrabajoPractico1/css/Media/mobile.css
+++ b/TrabajoPractico1/css/Media/mobile.css
@@ -1,9 +1,9 @@
-/* @media (max-width: 480px) {
-    header nav {
-      flex-direction: column;
-    }
-  
-    .footer {
-      text-align: center;
-    }
-  } */
+@media (max-width: 480px) {
+  header nav {
+    flex-direction: column;
+  }
+
+  .footer {
+    text-align: center;
+  }
+}
