--- a/TrabajoPractico1/css/Pages/galery.css
+++ b/TrabajoPractico1/css/Pages/galery.css
@@ -21,10 +21,9 @@ a {
     display: grid;
     grid-template-columns: repeat(4, 1fr); /* Por defecto: 4 columnas */
     gap: 15px;
-    margin: 30px auto;
     padding: 0 20px;
-    max-width: 1200px;
     justify-items: center;
+    grid-auto-rows: auto;
   }
   .grid-container img {
       width: 200px;
@@ -48,6 +47,9 @@ a {
 @media (max-width: 1024px) {
     .grid-container {
       grid-template-columns: repeat(3, 1fr);
+    }
+    img{
+
     }
   }
 
