--- a/TrabajoPractico1/css/Pages/services.css
+++ b/TrabajoPractico1/css/Pages/services.css
@@ -18,3 +18,87 @@
     }
     
 } */
+
+/* Estilos para la sección de Servicios. Mobile-first */
+.body {
+    font-family: "Bungee Spice", sans-serif;
+    background: linear-gradient(to bottom, #551800, #101010);
+    margin: 0;
+    padding: 0;
+}
+
+.titulo-servicios {
+    text-align: center;
+    font-size: 2.5rem;
+    margin: 2rem 0;
+    
+}
+
+.cards-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+    padding: 2rem;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.card {
+    background-color: rgba(20, 20, 20, 0.95);
+    border-radius: 15px;
+    overflow: hidden;
+    text-align: center;
+
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card:hover {
+    transform: scale(1.05);
+    
+}
+.card img {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    
+}
+
+.card h2 {
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    
+}
+
+.card p {
+    margin: 1rem;
+    font-size: 1rem;
+    
+}
+
+.card button {
+    
+    border: none;
+    padding: 0.6rem 1.2rem;
+    
+    border-radius: 8px;
+    font-weight: bold;
+    cursor: pointer;
+    margin-bottom: 1rem;
+    transition: background-color 0.3s ease;
+}
+
+
+/* Media Query para otras pantallas */
+@media (min-width: 768px) {
+    .cards-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+/* Media Query para computadora */
+@media (min-width: 1024px) {
+    .cards-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
