Algunas cosas mas

--- a/TP3 general/src/views/ejs/partials/tabla-turnos.ejs
+++ b/TP3 general/src/views/ejs/partials/tabla-turnos.ejs
@@ -5,12 +5,11 @@
       <th>Fecha</th>
       <th>Hora</th>
       <th>Motivo</th>
-      <th>Paciente ID</th>
+      <th>Paciente</th>
       <th>Acciones</th>
     </tr>
   </thead>
   <tbody id="tabla-turnos-body">
-    <!-- JS agregará filas aquí -->
+    <!-- filas se insertan aquí -->
   </tbody>
 </table>
-
