--- a/TP3 general/src/views/ejs/login.ejs
+++ b/TP3 general/src/views/ejs/login.ejs
@@ -12,12 +12,12 @@
                 <form id="loginForm" action="/api/v1/pacientes/login" method="POST">
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required>
-                    
+
 
                     <label for="password">Contraseña:</label>
                     <input type="password" id="password" name="password" required>
 
-                    <button type="submit">Iniciar sesión</button>
+                    <button class="btn btn-login" type="submit">Iniciar sesión</button>
                 </form>
             </main>
 
