--- a/TP3 general/src/views/ejs/partials/tabla-pacientes.ejs
+++ b/TP3 general/src/views/ejs/partials/tabla-pacientes.ejs
@@ -8,6 +8,6 @@
     </tr>
   </thead>
   <tbody id="tabla-pacientes-body">
-    <!-- JS agregará filas aquí -->
+    <!-- filas se insertan aquí -->
   </tbody>
 </table>
