--- a/TP3 general/public/css/styles.css
+++ b/TP3 general/public/css/styles.css
@@ -1,10 +1,3 @@
-/* Reset básico */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 /* Tipografía general */
 body {
   font-family: Arial, sans-serif;
@@ -139,7 +132,7 @@ footer {
   height: 100px;
   width: auto;
   display: block;
-  margin: 0 auto 10px auto; /* centra y da espacio inferior */
+  margin: 0 auto 10px auto;
 }
 
 /* Centrar contenido del título */
